[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cctbx>=2025.10",
    "cryptography>=46.0.3",
    "fastapi>=0.116.1",
    "lauetools>=3.1.41",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.11.7",
    "pymatgen>=2025.10.7",
    "pypdf>=6.1.3",
    "scipy>=1.16.3",
    "uvicorn>=0.30.6",
    "xrayutilities>=1.7.12",
]
